appId: llc.fungee.ingredicheck
tags: [settings, auth, delete-account]
---
- runFlow: ../../subflows/launch/settings.yaml
- scrollUntilVisible:
    element:
      id: settings_delete_account_button
    direction: DOWN
    timeout: 30000
- tapOn:
    id: settings_delete_account_button
- extendedWaitUntil:
    visible:
      text: Cancel
    timeout: 10000
- tapOn:
    text: Cancel
- extendedWaitUntil:
    visible:
      id: settings_content_view
    timeout: 10000
- assertVisible:
    id: settings_content_view
